--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript-prettier": "^2.1.1",
     "eslint-plugin-jest": "^23.8.2",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "prettier": "^2.0.4",
     "typescript": "^3.7.5"
   }
