--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/node-sass": "^4.11.1",
+    "clsx": "^1.1.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "npm-run-all --parallel dev watch:css",
@@ -47,6 +50,7 @@
   "devDependencies": {
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.6",
+    "@types/recharts": "^1.8.13",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript-prettier": "^2.1.1",
     "eslint-plugin-jest": "^23.8.2",
